# cookiecutter_chartbook

./: .gitignore  LICENSE.md  README.md  cookiecutter.json
.github/workflows/: test_template.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_cookiecutter.py  test_template.py
{{cookiecutter.project_slug}}/: README.md  chartbook.toml  dodo.py  environment.yml  pixi.toml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/: settings.py
