[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "colorama",
    "doit==0.36.0",
    "fabric==3.2.2",
    "holidays",
    "ipython",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas-datareader==0.10.0",
    "pandas-market-calendars==4.4.1",
    "pandas==2.2.3",
    "paramiko==3.5.0",
    "plotly==5.24.1",
    "polars==1.9.0",
    "pyarrow",
    "pytest==8.3.3",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "pyxlsb==1.0.10",
    "requests==2.32.3",
    "ruff",
    "black==24.8.0",
    "scikit-learn==1.5.2",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.4",
    "xlrd==2.0.1",
    "xlwings==0.33.3",
    "zstandard==0.23.0",
    "linearmodels==6.1",
{% if cookiecutter.include_jupyter_notebooks %}    "jupyter",
    "jupyterlab",
    "jupytext",
    "notebook",
{% endif %}{% if cookiecutter.include_chartbook or cookiecutter.include_jupyter_notebooks %}    "ABlog==0.11.11",
    "jupyter-book",
    "linkify-it-py",
    "myst-nb",
    "myst-parser==2.0.0",
    "numpydoc==1.8.0",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-autodoc2",
    "sphinx-book-theme==1.1.3",
    "sphinx-design",
    "sphinx==7.3.7",
    "sphinxext-opengraph",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxext-rediraffe",
{% endif %}{% if cookiecutter.include_crsp_stock or cookiecutter.include_crsp_compustat %}    "wrds==3.2.0",
    "jaydebeapi",
{% endif %}{% if cookiecutter.include_bloomberg %}    "xbbg==0.7.7",
{% endif %}]

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
